# machine-learning-basics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
helper/: data_read.py
notebooks/: logistic_Regression.ipynb  ml.ipynb
notebooks/projects/: flower_type_classification.ipynb
notebooks/supervised_learning/: decision_trees_random_forests.ipynb  linear_regression.ipynb  logistic_Regression.ipynb  regularization_regress_logistic.ipynb
notebooks/unsupervised_learning/: KMeans_center_Visualizer.py  kmeans_clustering.ipynb  loaddata.py
notebooks/unsupervised_learning/anomaly_detection/: Anomaly_Detection.ipynb  utils.py
src/ml_implement/architecture/: StochasticGD.py  decision_tree_compute_entropy.py  gradient_dsc_mine.py
src/ml_implement/general_utils/: data_read.py  univershal_plotter.py
