
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "machine-learning-basics"
version = "0.1.0"
description = "Local ML utilities and experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"numpy",
"pandas",
"scikit-learn"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ml_implement", "ml_implement.*"]

